# hanja-quiz

./: .gitignore  app.py  debug_quiz.py  init_progress.py  main.py  pyproject.toml
docs/: plan.md  schema.md
src/: api.py  dictionary.py  extractor.py  loader.py  models.py  quiz.py  reader.py  repository.py  schemas.py
tests/: test_api.py  test_dictionary.py  test_extractor.py  test_models.py  test_quiz.py  test_reader.py  test_repository.py
